--- a/Dockerfile.ocp
+++ b/Dockerfile.ocp
@@ -1,44 +1,37 @@
-FROM registry.redhat.io/ubi9/go-toolset:1.24.4-1754467841 AS builder
+ARG BUILDER_IMAGE=registry.redhat.io/ubi9/go-toolset:1.24.4-1754467841
+ARG BASE_IMAGE=registry.redhat.io/rhel9-4-els/rhel-minimal:9.4
+
+# Build the manager binary
+FROM ${BUILDER_IMAGE} AS builder
 ARG TARGETOS
 ARG TARGETARCH
+ARG TARGETPLATFORM
+
+USER 0
 
 WORKDIR /workspace
-USER 0
-# Copy the Go Modules manifests
-COPY go.mod go.mod
-COPY go.sum go.sum
-# cache deps before building and copying source so that we don't need to re-download as much
-# and so that source changes don't invalidate our downloaded layer
-RUN go mod download
+COPY . .
 
-COPY cmd/ cmd/
-COPY pkg/ pkg/
+ENV GOEXPERIMENT=strictfipsruntime
+ENV COMMON_BUILD_ARGS="-tags=strictfipsruntime -mod=vendor -a"
+ENV BINARY_NAME=openshift-mcp-server
+RUN CGO_ENABLED=1 GOOS=${TARGETOS:-linux} GOARCH=${TARGETARCH} make build
 
-# this directory is checked by ecosystem-cert-preflight-checks task in Konflux
-COPY LICENSE /licenses/
+FROM --platform=$TARGETPLATFORM ${BASE_IMAGE}
+WORKDIR /
+COPY --from=builder /workspace/openshift-mcp-server .
+RUN mkdir /licenses
+COPY --from=builder /workspace/LICENSE /licenses/.
+USER 65532:65532
 
-# Build
-# the GOARCH has not a default value to allow the binary be built according to the host where the command
-# was called. For example, if we call make docker-build in a local env which has the Apple Silicon M1 SO
-# the docker BUILDPLATFORM arg will be linux/arm64 when for Apple x86 it will be linux/amd64. Therefore,
-# by leaving it empty we can ensure that the container and binary shipped on it will have the same platform.
-RUN CGO_ENABLED=1 GOOS=${TARGETOS:-linux} GOARCH=${TARGETARCH} go build -a -tags strictfipsruntime -o openshift-mcp-server ./cmd/kubernetes-mcp-server
-
-FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
-WORKDIR /app
-COPY --from=builder /workspace/openshift-mcp-server /app/openshift-mcp-server
-COPY --from=builder /licenses /licenses
-ENTRYPOINT ["/app/openshift-mcp-server", "--port", "8080"]
-
-EXPOSE 8080
+COPY mcp_config.toml /mcp_config.toml
+ENV CONFIG_PATH=/mcp_config.toml
 
 # Labels for enterprise contract
 LABEL com.redhat.component=openshift-mcp-server
 LABEL description="Red Hat OpenShift MCP Server"
-LABEL distribution-scope=private
 LABEL io.k8s.description="Red Hat OpenShift MCP Server"
-LABEL io.k8s.display-name="Openshift Lightspeed RAG content"
-LABEL io.openshift.tags="openshift,lightspeed,mcp,assistant,rag"
+LABEL io.openshift.tags="openshift,mcp"
 LABEL name=openshift-mcp-server
 LABEL release=0.0.1
 LABEL url="https://github.com/openshift/openshift-mcp-server"
@@ -46,4 +39,4 @@ LABEL vendor="Red Hat, Inc."
 LABEL version=0.0.1
 LABEL summary="Red Hat OpenShift MCP Server"
 
-USER 65532:65532
+ENTRYPOINT ["/openshift-mcp-server", "--config", "$CONFIG_PATH"]
