--- a/Dockerfile.ocp
+++ b/Dockerfile.ocp
@@ -28,6 +28,8 @@ ENV CONFIG_PATH=/mcp_config.toml
 # Labels for enterprise contract
 LABEL com.redhat.component=openshift-mcp-server
 LABEL description="Red Hat OpenShift MCP Server"
+LABEL io.k8s.description="Red Hat OpenShift MCP Server"
+LABEL io.k8s.display-name="Red Hat OpenShift MCP Server"
 LABEL io.openshift.tags="openshift,mcp"
 LABEL name=openshift-mcp-server
 LABEL release=0.0.1
