--- a/Dockerfile.ocp
+++ b/Dockerfile.ocp
@@ -27,12 +27,11 @@ ENV CONFIG_PATH=/mcp_config.toml
 
 # Labels for enterprise contract
 LABEL com.redhat.component=openshift-mcp-server
-LABEL cpe="cpe:/a:redhat:openshift_lightspeed:1::el9"
 LABEL description="Red Hat OpenShift MCP Server"
 LABEL io.k8s.description="Red Hat OpenShift MCP Server"
 LABEL io.k8s.display-name="Red Hat OpenShift MCP Server"
 LABEL io.openshift.tags="openshift,mcp"
-LABEL name="openshift-lightspeed/openshift-mcp-server-rhel9"
+LABEL name=openshift-mcp-server
 LABEL release=0.0.1
 LABEL url="https://github.com/openshift/openshift-mcp-server"
 LABEL vendor="Red Hat, Inc."
