--- a/.gitignore
+++ b/.gitignore
@@ -3,27 +3,30 @@ _output/
 .vscode/
 .docusaurus/
 node_modules/
+kiali-mcp-server
+kiali-mcp-client
 
 .npmrc
-kubernetes-mcp-server
-!cmd/kubernetes-mcp-server
-!pkg/kubernetes-mcp-server
-npm/kubernetes-mcp-server/README.md
-npm/kubernetes-mcp-server/LICENSE
-!npm/kubernetes-mcp-server
-kubernetes-mcp-server-darwin-amd64
-!npm/kubernetes-mcp-server-darwin-amd64/
-kubernetes-mcp-server-darwin-arm64
-!npm/kubernetes-mcp-server-darwin-arm64
-kubernetes-mcp-server-linux-amd64
-!npm/kubernetes-mcp-server-linux-amd64
-kubernetes-mcp-server-linux-arm64
-!npm/kubernetes-mcp-server-linux-arm64
-kubernetes-mcp-server-windows-amd64.exe
-kubernetes-mcp-server-windows-arm64.exe
+kiali-mcp-server
+!cmd/kiali-mcp-server
+!cmd/kiali-mcp-client
+!pkg/kiali-mcp-server
+npm/kiali-mcp-server/README.md
+npm/kiali-mcp-server/LICENSE
+!npm/kiali-mcp-server
+kiali-mcp-server-darwin-amd64
+!npm/kiali-mcp-server-darwin-amd64/
+kiali-mcp-server-darwin-arm64
+!npm/kiali-mcp-server-darwin-arm64
+kiali-mcp-server-linux-amd64
+!npm/kiali-mcp-server-linux-amd64
+kiali-mcp-server-linux-arm64
+!npm/kiali-mcp-server-linux-arm64
+kiali-mcp-server-windows-amd64.exe
+kiali-mcp-server-windows-arm64.exe
 
 python/.venv/
 python/build/
 python/dist/
-python/kubernetes_mcp_server.egg-info/
-!python/kubernetes-mcp-server
+python/kiali_mcp_server.egg-info/
+!python/kiali-mcp-server
