Kiali-mcp-server 0.0.1

--- a/Dockerfile.ocp
+++ b/Dockerfile.ocp
@@ -17,7 +17,7 @@ RUN make -f Makefile-ocp.mk build-ocp GO_BUILD_ENV='GOOS=${TARGETOS:-linux} GOAR
 
 FROM --platform=$TARGETPLATFORM ${BASE_IMAGE}
 WORKDIR /
-COPY --from=builder /workspace/openshift-mcp-server .
+COPY --from=builder /workspace/kiali-mcp-server .
 RUN mkdir /licenses
 COPY --from=builder /workspace/LICENSE /licenses/.
 USER 65532:65532
@@ -26,17 +26,17 @@ COPY mcp_config.toml /mcp_config.toml
 ENV CONFIG_PATH=/mcp_config.toml
 
 # Labels for enterprise contract
-LABEL com.redhat.component=openshift-mcp-server
+LABEL com.redhat.component=kiali-mcp-server
 LABEL cpe="cpe:/a:redhat:openshift_lightspeed:1::el9"
-LABEL description="Red Hat OpenShift MCP Server"
-LABEL io.k8s.description="Red Hat OpenShift MCP Server"
-LABEL io.k8s.display-name="Red Hat OpenShift MCP Server"
-LABEL io.openshift.tags="openshift,mcp"
-LABEL name="openshift-lightspeed/openshift-mcp-server-rhel9"
+LABEL description="Red Hat Kiali MCP Server"
+LABEL io.k8s.description="Red Hat Kiali MCP Server"
+LABEL io.k8s.display-name="Red Hat Kiali MCP Server"
+LABEL io.openshift.tags="kiali,ossm,mcp"
+LABEL name="openshift-lightspeed/kiali-mcp-server-rhel9"
 LABEL release=0.0.1
-LABEL url="https://github.com/openshift/openshift-mcp-server"
+LABEL url="https://github.com/kiali/kiali-mcp-server"
 LABEL vendor="Red Hat, Inc."
 LABEL version=0.0.1
-LABEL summary="Red Hat OpenShift MCP Server"
+LABEL summary="Red Hat Kiali MCP Server"
 
-ENTRYPOINT ["/openshift-mcp-server", "--config", "$CONFIG_PATH"]
+ENTRYPOINT ["/kiali-mcp-server", "--config", "$CONFIG_PATH"]
