--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "kubernetes-mcp-server"
+name = "kiali-mcp-server"
 version = "0.0.0"
-description = "Kubernetes MCP Server (Model Context Protocol) with special support for OpenShift"
+description = "Kiali MCP Server (Model Context Protocol) with special support for OpenShift"
 readme = {file="README.md", content-type="text/markdown"}
 requires-python = ">=3.6"
 license = "Apache-2.0"
@@ -18,8 +18,8 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/containers/kubernetes-mcp-server"
-Repository = "https://github.com/containers/kubernetes-mcp-server"
+Homepage = "https://github.com/kiali/kiali-mcp-server"
+Repository = "https://github.com/kiali/kiali-mcp-server"
 
 [project.scripts]
-kubernetes-mcp-server = "kubernetes_mcp_server:main"
+kiali-mcp-server = "kiali_mcp_server:main"
