--- a/npm/kiali-mcp-server-darwin-arm64/package.json
+++ b/npm/kiali-mcp-server-darwin-arm64/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kiali-mcp-server-darwin-arm64",
+  "name": "@kiali/kiali-mcp-server-darwin-arm64",
   "version": "0.0.0",
   "description": "Model Context Protocol (MCP) server for Kiali",
   "os": [
