--- a/npm/kiali-mcp-server/package.json
+++ b/npm/kiali-mcp-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kiali-mcp-server",
+  "name": "@kiali/kiali-mcp-server",
   "version": "0.0.0",
   "description": "Model Context Protocol (MCP) server for Kiali",
   "main": "./bin/index.js",
