--- a/npm/kubernetes-mcp-server-darwin-amd64/package.json
+++ b/npm/kubernetes-mcp-server-darwin-amd64/package.json
@@ -2,6 +2,10 @@
   "name": "kubernetes-mcp-server-darwin-amd64",
   "version": "0.0.0",
   "description": "Model Context Protocol (MCP) server for Kubernetes and OpenShift",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/containers/kubernetes-mcp-server.git"
+  },
   "os": [
     "darwin"
   ],
