chore(ci): update macOS build (Amd64/x86-64) target from 13 to 15 (#450)
https://github.com/actions/runner-images/issues/13046

Signed-off-by: Marc Nuri <marc@marcnuri.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
           - ubuntu-latest #x64
           - ubuntu-24.04-arm #arm64
           - windows-latest #x64
-          - macos-13 #x64
+          - macos-15-intel #x64
           - macos-latest #arm64
     runs-on: ${{ matrix.os }}
     steps:
