--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: 1.23
+  GO_VERSION: 1.25
   UV_PUBLISH_TOKEN: ${{ secrets.UV_PUBLISH_TOKEN }}
 
 permissions:
@@ -22,6 +22,7 @@ permissions:
 jobs:
   release:
     name: Release
+    if: github.repository == 'containers/kubernetes-mcp-server'
     runs-on: macos-latest
     steps:
       - name: Checkout
@@ -50,6 +51,7 @@ jobs:
           make npm-publish
   python:
     name: Release Python
+    if: github.repository == 'containers/kubernetes-mcp-server'
     # Python logic requires the tag/release version to be available from GitHub
     needs: release
     runs-on: ubuntu-latest
