feat(helm): add Helm chart for Kubernetes MCP Server deployment (#440)
Added a Helm chart to simplify deployment of the Kubernetes MCP server with support for both Kubernetes and OpenShift clusters.

Signed-off-by: Andrew Block <andy.block@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules/
 
 .npmrc
 kubernetes-mcp-server
+!charts/kubernetes-mcp-server
 !cmd/kubernetes-mcp-server
 !pkg/kubernetes-mcp-server
 npm/kubernetes-mcp-server/README.md
