fix broken ci tests |  update go v-1.25

--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1,4 +1,5 @@
-ARG BUILDER_IMAGE=registry.ci.openshift.org/ocp/builder:rhel-9-golang-1.24-openshift-4.20
+# Switch to registry.ci.openshift.org/ocp/builder:rhel-9-golang-1.24-openshift-4.20 when Go v1.24.10 >= available
+ARG BUILDER_IMAGE=quay.io/jacobsee/openshift-build:rhel-9-golang-1.25
 ARG BASE_IMAGE=registry.ci.openshift.org/ocp/4.20:base-rhel9
 
 # Build the manager binary
