--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ kubernetes-mcp-server-linux-arm64
 kubernetes-mcp-server-windows-amd64.exe
 kubernetes-mcp-server-windows-arm64.exe
 
+.keycloak-config
+
 python/.venv/
 python/build/
 python/dist/
