--- a/dev/config/keycloak/deployment.yaml
+++ b/dev/config/keycloak/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       containers:
       - name: keycloak
         image: quay.io/keycloak/keycloak:26.4
-        args: ["start-dev"]
+        args: ["start-dev", "--features=token-exchange:v1,admin-fine-grained-authz:v1"]
         env:
         - name: KC_BOOTSTRAP_ADMIN_USERNAME
           value: "admin"
