--- a/.ci-operator.yaml
+++ b/.ci-operator.yaml
@@ -1,4 +1,5 @@
 build_root_image:
-  namespace: openshift
-  name: release
-  tag: rhel-9-release-golang-1.25-openshift-4.21
+  image_stream_tag:
+    name: builder
+    namespace: ocp
+    tag: rhel-9-golang-1.25-openshift-4.21
