chore(ci): disable kiali eval tasks temporarily (#643)
The kiali tasks are excluded from eval runs until the kiali MCP server
integration is properly set up.

Signed-off-by: Marc Nuri <marc@marcnuri.com>

--- a/evals/openai-agent/eval-inline.yaml
+++ b/evals/openai-agent/eval-inline.yaml
@@ -16,7 +16,8 @@ config:
       apiKeyKey: JUDGE_API_KEY
       modelNameKey: JUDGE_MODEL_NAME
   taskSets:
-    - glob: ../tasks/*/*/*.yaml
+    # TODO: Re-enable kiali tasks once https://github.com/containers/kubernetes-mcp-server/issues/642 is resolved
+    - glob: ../tasks/kubernetes/*/*.yaml
       assertions:
         toolsUsed:
           - server: kubernetes
