feat(metrics): add Prometheus exporter and monitoring resources (#670)
* feat(metrics): add Prometheus exporter and monitoring resources

Add a Prometheus HTTP endpoint (/metrics) to expose OpenTelemetry metrics
in Prometheus format. Also add Helm chart templates for ServiceMonitor
and PrometheusRule to enable integration with Prometheus operators.

Signed-off-by: Nader Ziada <nziada@redhat.com>

update gomod

Signed-off-by: Nader Ziada <nziada@redhat.com>

* add metrics endpoint to otel.md

Signed-off-by: Nader Ziada <nziada@redhat.com>

---------

Signed-off-by: Nader Ziada <nziada@redhat.com>

--- a/charts/kubernetes-mcp-server/templates/deployment.yaml
+++ b/charts/kubernetes-mcp-server/templates/deployment.yaml
@@ -43,6 +43,11 @@ spec:
           args:
             - "--config"
             - "{{ .Values.configFilePath }}"
+          env:
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- tpl (toYaml .) . | nindent 12 }}
