feat(helm): add support for additional containers in deployment (#649)
* feat(helm): add support for additional containers in deployment

Signed-off-by: Hapshanko <adamgaming391100@gmail.com>

* Add requested changes docs

Signed-off-by: Hapshanko <adamgaming391100@gmail.com>

* Remove readme changes seperate PR

Signed-off-by: Hapshanko <adamgaming391100@gmail.com>

* Update README

Signed-off-by: Hapshanko <adamgaming391100@gmail.com>

---------

Signed-off-by: Hapshanko <adamgaming391100@gmail.com>

--- a/charts/kubernetes-mcp-server/values.yaml
+++ b/charts/kubernetes-mcp-server/values.yaml
@@ -164,6 +164,20 @@ extraVolumeMounts: []
 #   mountPath: "/etc/foo"
 #   readOnly: true
 
+# -- Additional containers to add to the pod (sidecars).
+# -- Each container is defined as a complete container spec.
+extraContainers: []
+# - name: sidecar-example
+#   image: quay.io/prometheus/busybox:latest
+#   command: ["sh", "-c", "while true; do echo 'Sidecar running'; sleep 30; done"]
+#   resources:
+#     requests:
+#       cpu: 10m
+#       memory: 32Mi
+#     limits:
+#       cpu: 50m
+#       memory: 64Mi
+
 nodeSelector: {}
 
 tolerations: []
