--- a/charts/kubernetes-mcp-server/templates/deployment.yaml
+++ b/charts/kubernetes-mcp-server/templates/deployment.yaml
@@ -66,6 +66,9 @@ spec:
           {{- with .Values.extraVolumeMounts }}
             {{- tpl (toYaml .) . | nindent 12 }}
           {{- end }}
+      {{- with .Values.extraContainers }}
+        {{- tpl (toYaml .) . | nindent 8 }}
+      {{- end }}
       volumes:
         - name: config
           configMap:
