feat(config) Using latest enhancement to MCPChecker eval to leverage verification steps for config eval tasks (#742)
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/evals/tasks/config/identify-context-for-task/identify-context-for-task.yaml
+++ b/evals/tasks/config/identify-context-for-task/identify-context-for-task.yaml
@@ -21,6 +21,11 @@ spec:
         # - current: name of current context
         # - count: number of contexts found
 
+    - llmJudge:
+        contains: "{steps.kubernetes.getCurrentContext.context}"
+        # Validates the agent mentioned the actual current context name
+        # Template expands to e.g., "kind-kind" or "minikube"
+
   cleanup:
     # No cleanup needed - read-only operation
 
