fix(helm): use root context $ in tpl() inside with blocks (#744)
* fix(helm): use root context $ in tpl() inside with blocks

Inside {{- with .Values.xxx }}, the dot . is the current value (e.g. array
or nested object). Using tpl (toYaml .) . passes that value as the template
context, but tpl expects the root context (chartutil.Values). This causes
'wrong type for value; expected chartutil.Values; got []interface {}' when
imagePullSecrets, livenessProbe, readinessProbe, etc. are set.

Use the root context $ as the second argument to tpl wherever it is used
inside a with block, so template expressions in the YAML string are
evaluated against the full chart context. The tpl (toYaml (default ...)) .
usages outside with blocks are left unchanged.

Signed-off-by: sh.yoon <sh.yoon.devops@gmail.com>

* fix(helm): apply same tpl context fix to serviceaccount.yaml

The same issue fixed in deployment.yaml also exists in
serviceaccount.yaml: using tpl (toYaml .) . inside a with block
fails when the value contains template expressions, because .
refers to the current value instead of the root chart context.

This commit:
- Changes . to $ in serviceaccount.yaml tpl call
- Adds serviceAccount.annotations test case to ci/tpl-test-values.yaml

Signed-off-by: Marc Nuri <marc@marcnuri.com>

---------

Signed-off-by: sh.yoon <sh.yoon.devops@gmail.com>
Signed-off-by: Marc Nuri <marc@marcnuri.com>
Co-authored-by: Marc Nuri <marc@marcnuri.com>

--- a/charts/kubernetes-mcp-server/templates/deployment.yaml
+++ b/charts/kubernetes-mcp-server/templates/deployment.yaml
@@ -15,17 +15,17 @@ spec:
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
       {{- with .Values.podAnnotations }}
-        {{- tpl (toYaml .) . | nindent 8 }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       labels:
         {{- include "kubernetes-mcp-server.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
-        {{- tpl (toYaml .) . | nindent 8 }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- tpl (toYaml .) . | nindent 8 }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "kubernetes-mcp-server.serviceAccountName" . }}
       securityContext:
@@ -50,41 +50,41 @@ spec:
                   fieldPath: metadata.namespace
           {{- with .Values.livenessProbe }}
           livenessProbe:
-            {{- tpl (toYaml .) . | nindent 12 }}
+            {{- tpl (toYaml .) $ | nindent 12 }}
           {{- end }}
           {{- with .Values.readinessProbe }}
           readinessProbe:
-            {{- tpl (toYaml .) . | nindent 12 }}
+            {{- tpl (toYaml .) $ | nindent 12 }}
           {{- end }}
           {{- with .Values.resources }}
           resources:
-            {{- tpl (toYaml .) . | nindent 12 }}
+            {{- tpl (toYaml .) $ | nindent 12 }}
           {{- end }}
           volumeMounts:
             - name: config
               mountPath: {{ .Values.configFilePath | dir }}
           {{- with .Values.extraVolumeMounts }}
-            {{- tpl (toYaml .) . | nindent 12 }}
+            {{- tpl (toYaml .) $ | nindent 12 }}
           {{- end }}
       {{- with .Values.extraContainers }}
-        {{- tpl (toYaml .) . | nindent 8 }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       volumes:
         - name: config
           configMap:
             name: {{ include "kubernetes-mcp-server.fullname" . }}
       {{- with .Values.extraVolumes }}
-        {{- tpl (toYaml .) . | nindent 8 }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
-        {{- tpl (toYaml .) . | nindent 8 }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       {{- with .Values.affinity }}
       affinity:
-        {{- tpl (toYaml .) . | nindent 8 }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       {{- with .Values.tolerations }}
       tolerations:
-        {{- tpl (toYaml .) . | nindent 8 }}
+        {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
