--- a/evals/tasks/kubevirt/create-vm-basic/task.yaml
+++ b/evals/tasks/kubevirt/create-vm-basic/task.yaml
@@ -1,5 +1,8 @@
 kind: Task
 metadata:
+  labels:
+    suite: kubevirt
+    requires: kubevirt
   name: "create-basic-vm"
   difficulty: easy
 steps:
