--- a/evals/tasks/kubevirt/update-vm-resources/task.yaml
+++ b/evals/tasks/kubevirt/update-vm-resources/task.yaml
@@ -1,5 +1,8 @@
 kind: Task
 metadata:
+  labels:
+    suite: kubevirt
+    requires: kubevirt
   name: "update-vm-resources"
   difficulty: hard
 steps:
