feat(helm-charts): make Service targetPort Configurable (#779)
* feat(helm): make targetPort configurable

Signed-off-by: Denis Khachyan <khachyanda@gmail.com>

* comment for the new value

Signed-off-by: Denis Khachyan <khachyanda@gmail.com>

---------

Signed-off-by: Denis Khachyan <khachyanda@gmail.com>

--- a/charts/kubernetes-mcp-server/values.yaml
+++ b/charts/kubernetes-mcp-server/values.yaml
@@ -118,6 +118,8 @@ service:
   type: ClusterIP
   # -- This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
   port: 8080
+  # -- Target port for the service. Useful when deploying with an proxy sidecar. Set this to the sidecar's port to route traffic through the proxy before reaching the main container.
+  targetPort: http
 
 # -- This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
