docs: add configuration reference and reorganize documentation (#783)
* docs: add configuration reference and reorganize documentation

- Create docs/configuration.md with comprehensive TOML configuration
  reference documenting all StaticConfig options
- Extract detailed configuration content from README.md to reduce
  its size and improve focus
- Add auto-generated toolsets table markers to configuration.md
  for CI synchronization
- Update Makefile and CI workflow to process both README.md and
  docs/configuration.md with update-readme-tools
- Rename docs/PROMPTS.md to docs/prompts.md (lowercase convention)
- Reorganize docs/README.md with clearer section structure
- Update AGENTS.md with Documentation section and conventions

Signed-off-by: Marc Nuri <marc@marcnuri.com>

* docs: address PR review feedback

- Replace whitelist/blacklist with allowlist/denylist terminology
- Add RBAC resources to denied_resources example

Signed-off-by: Marc Nuri <marc@marcnuri.com>

---------

Signed-off-by: Marc Nuri <marc@marcnuri.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,9 +40,9 @@ jobs:
         run: make update-readme-tools
       - name: Check for uncommitted changes
         run: |
-          if ! git diff --quiet README.md; then
-            echo "::error::README.md is out of date. Please run 'make update-readme-tools' and commit the changes."
-            git diff README.md
+          if ! git diff --quiet README.md docs/configuration.md; then
+            echo "::error::README.md or docs/configuration.md is out of date. Please run 'make update-readme-tools' and commit the changes."
+            git diff README.md docs/configuration.md
             exit 1
           fi
 
